k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
  labels:
    app.kubernetes.io/component: jenkins-master
    app.kubernetes.io/instance: my-jenkins
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: jenkins
    helm.sh/chart: jenkins-1.1.16
  name: my-jenkins
  namespace: default
spec:
  rules:
  - host: jk1.jp-tok.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: my-jenkins
          servicePort: 8080
      - path: /test	  
        backend:
          serviceName: node-apl-svc-test
          servicePort: 3000
  tls:
  - hosts:
    - jk1.jp-tok.containers.appdomain.cloud
    secretName: jk1
